Fix minors